--- a/app/src/main/res/layout/activity_welcome_screen.xml
+++ b/app/src/main/res/layout/activity_welcome_screen.xml
@@ -1,16 +1,21 @@
 <RelativeLayout     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:id="@+id/start"
     android:background="@mipmap/back">
 
     <TextView
+        android:id="@+id/text"
         android:text="TAP ANYWHERE ON THE SCREEN TO START READING CHAT"
         android:gravity="center"
         android:layout_centerInParent="true"
         android:background="@drawable/round_button"
         android:layout_width="250dp"
         android:layout_height="wrap_content" />
+
+    <View
+        android:id="@+id/view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
     <FrameLayout
         android:id="@+id/fragmentContainer"
