--- a/app/src/main/res/layout/chat_screen.xml
+++ b/app/src/main/res/layout/chat_screen.xml
@@ -20,6 +20,6 @@
             android:layout_height="wrap_content">
         </android.support.v7.widget.RecyclerView>
 
-    </com.facebook.shimmer.ShimmerFrameLayout>>
+    </com.facebook.shimmer.ShimmerFrameLayout>
 
 </LinearLayout>
