--- a/app/src/main/res/layout/receiver_image.xml
+++ b/app/src/main/res/layout/receiver_image.xml
@@ -5,8 +5,10 @@
     <ImageView
         android:layout_alignParentRight="true"
         android:id="@+id/image"
-        android:layout_margin="15dp"
+        android:layout_margin="10dp"
         android:layout_width="125dp"
-        android:layout_height="125dp"/>
+        android:layout_height="125dp">
+
+    </ImageView>
 
 </RelativeLayout>
