--- a/app/src/main/res/layout/receiver_message.xml
+++ b/app/src/main/res/layout/receiver_message.xml
@@ -1,8 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    android:layout_marginVertical="5dp"
->
+    android:layout_marginVertical="5dp">
 
 <TextView
     android:textSize="22dp"
