--- a/app/src/main/res/layout/sender_image.xml
+++ b/app/src/main/res/layout/sender_image.xml
@@ -1,12 +1,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="wrap_content"
-    android:layout_width="match_parent">
+android:layout_height="wrap_content"
+android:layout_width="match_parent">
 
-    <ImageView
-        android:layout_alignParentLeft="true"
-        android:id="@+id/image"
-        android:layout_margin="15dp"
-        android:layout_width="125dp"
-        android:layout_height="125dp" />
+<ImageView
+    android:layout_alignParentRight="true"
+    android:id="@+id/image"
+    android:layout_margin="10dp"
+    android:layout_width="125dp"
+    android:layout_height="125dp">
+
+</ImageView>
 
 </RelativeLayout>
