--- a/app/src/main/res/layout/receiver_message.xml
+++ b/app/src/main/res/layout/receiver_message.xml
@@ -1,15 +1,28 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
     android:layout_marginVertical="5dp">
 
-<TextView
-    android:textSize="22dp"
-    android:layout_alignParentRight="true"
-    android:id="@+id/text"
-    android:textColor="@android:color/black"
-    android:background="@drawable/receiver"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content" />
+    <TextView
+        android:layout_height="0dp"
+        android:layout_width="0dp"
+        android:layout_weight=".25"/>
 
-</RelativeLayout>
+    <RelativeLayout
+        android:layout_weight="0.75"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:textSize="22dp"
+            android:id="@+id/text"
+            android:layout_alignParentRight="true"
+            android:textColor="@android:color/black"
+            android:gravity="start"
+            android:background="@drawable/receiver"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+    </RelativeLayout>
+
+</LinearLayout>
