--- a/app/src/main/res/layout/sender_message.xml
+++ b/app/src/main/res/layout/sender_message.xml
@@ -1,15 +1,27 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
     android:layout_marginVertical="5dp">
 
-    <TextView
-        android:textSize="22dp"
-        android:layout_alignParentLeft="true"
-        android:id="@+id/text"
-        android:textColor="@android:color/black"
-        android:background="@drawable/sender"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <LinearLayout
+        android:layout_weight="0.75"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content">
 
-</RelativeLayout>
+        <TextView
+            android:textSize="22dp"
+            android:id="@+id/text"
+            android:gravity="start"
+            android:textColor="@android:color/black"
+            android:background="@drawable/sender"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
+
+    <TextView
+        android:layout_height="0dp"
+        android:layout_width="0dp"
+        android:layout_weight=".25"/>
+
+</LinearLayout>
